# vimeflow

./: .claude_settings.json  .gitattributes  .gitignore  .mcp.json  .prettierignore  AGENTS.md  ARCHITECT.md  BUG_FIX_VERIFICATION.md  CHANGELOG.md  CHANGELOG.zh-CN.md  CLAUDE.md  COMPLETION_SUMMARY.md  COVERAGE.md  Cargo.toml  DESIGN.md  DEVELOPMENT.md  LICENSE  NEXT_COMMIT.txt  README.md  README.zh-CN.md  SESSION_3_SUMMARY.md  SESSION_4_SUMMARY.md  SETUP.md  THIRD_PARTY.md  VISUAL_VERIFICATION.md  claude-progress.txt  cspell.config.yaml  electron-builder.yml  eslint.config.js  feature_list.json  index.html  init.sh  linear-agent.env.example  linear-orchestrator.env.example  linear.env.example  lint-staged.config.js  package-lock.json  package.json  phase3-terminal-features.json  tailwind.config.js  (+7 more)
.cargo/: config.toml
.claude/: hookify.block-harness-no-api-key.local.md  hookify.block-harness-on-main.local.md  hookify.warn-harness-dry-run.local.md  hookify.warn-worktree-npm-install.local.md  settings.json
.claude-plugin/: marketplace.json
.design-sync/: NOTES.md  config.json  entry.ts
agents/: CLAUDE.md  architect.md  build-error-resolver.md  code-reviewer.md  doc-updater.md  e2e-runner.md  planner.md  refactor-cleaner.md  review-guard.md  security-reviewer.md  tdd-guide.md  typescript-reviewer.md
config/: devFileText.test.ts  devFileText.ts
crates/backend/: Cargo.toml  README.md
crates/backend/src/: debug.rs  lib.rs  review_state.rs
crates/backend/src/agent/: README.md  architecture.puml  commands.rs  config.rs  detector.rs  events.rs  kimi_usage_consent.rs  mod.rs  reply.rs  review.rs  sanitize_title.rs  types.rs
crates/backend/src/agent/adapter/: README.md  REVIEW.md  attach.rs  bindings.rs  error.rs  mod.rs  serde_helpers.rs  service.rs  session_lifecycle.rs  traits.rs  types.rs
crates/backend/src/agent/adapter/base/: diagnostics.rs  mod.rs  path_security.rs  transcript_state.rs  transcript_tail_service.rs  watcher_runtime.rs
crates/backend/src/agent/adapter/claude_code/: mod.rs  statusline.rs  transcript.rs  transcript_dto.rs  transcript_fixture_tests.rs
crates/backend/src/agent/adapter/claude_code/test_runners/: build.rs  cargo.rs  emitter.rs  matcher.rs  mod.rs  script_resolution.rs  test_file_patterns.rs  timestamps.rs  vitest.rs
crates/backend/src/agent/adapter/codex/: locator.rs  mod.rs  parser.rs  session_index.rs  transcript.rs  transcript_dto.rs
crates/backend/src/agent/adapter/kimi/: locator.rs  mod.rs  parser.rs  transcript.rs  transcript_dto.rs  types.rs  usage.rs  usage_fetch.rs
crates/backend/src/agent/adapter/kimi/fixtures/: sample_wire.jsonl
crates/backend/src/agent/adapter/opencode/: install.rs  locator.rs  mod.rs  model_catalog.rs  parser.rs  transcript.rs  transcript_dto.rs  types.rs
crates/backend/src/agent/adapter/opencode/fixtures/: sample_bridge.jsonl  sample_index.jsonl
crates/backend/src/agent/adapter/opencode/plugin/: vimeflow-opencode-bridge.test.ts  vimeflow-opencode-bridge.ts
crates/backend/src/aliases/: agent_aliases.rs  mod.rs
crates/backend/src/filesystem/: SECURITY.md  exists.rs  list.rs  mod.rs  mutate.rs  scope.rs  types.rs  write.rs
crates/backend/src/filesystem/tests/: list_tests.rs  mod.rs  mutate_tests.rs  read_tests.rs  scope_tests.rs
crates/backend/src/git/: mod.rs  test_helpers.rs  watcher.rs
crates/backend/src/runtime/: event_sink.rs  ipc.rs  mod.rs  state.rs  test_event_sink.rs
crates/backend/src/settings/: app_settings.rs  mod.rs  system_fonts.rs
crates/backend/src/terminal/: bridge.rs  bytes.rs  cache.rs  commands.rs  events.rs  foreground.rs  ghostty.rs  mod.rs  state.rs  test_commands.rs  types.rs  utf8.rs  workspace_layout.rs
crates/backend/src/trace/: mod.rs  tests.rs
crates/backend/tests/: git_diff_response.rs  git_staging.rs  ipc_subprocess.rs
crates/backend/tests/fixtures/: transcript_cargo_mixed.jsonl  transcript_vitest_pass.jsonl  transcript_vitest_replay.jsonl
crates/backend/tests/fixtures/codex/: rollout-malformed-mid.jsonl  rollout-minimal.jsonl  rollout-multi-turn.jsonl
docs/: CLAUDE.md  qa-runner-cloud-infra.md  (+1 more)
electron/: assets.d.ts  (+58 more)
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: debug.rs  lib.rs  main.rs
src-tauri/src/agent/: README.md  architecture.puml  commands.rs  detector.rs  events.rs  mod.rs  statusline.rs  transcript.rs  types.rs  watcher.rs
src-tauri/src/agent/adapter/: base.rs  json.rs  mod.rs  types.rs
src-tauri/src/agent/adapter/base/: diagnostics.rs  mod.rs  path_security.rs  transcript_state.rs  watcher_runtime.rs
src-tauri/src/agent/adapter/claude_code/: mod.rs  statusline.rs  transcript.rs  transcript_fixture_tests.rs
src-tauri/src/agent/adapter/claude_code/test_runners/: emitter.rs  path_resolution.rs  preview.rs  sanitiser.rs  script_resolution.rs  types.rs  vitest.rs
src-tauri/src/agent/adapter/codex/: locator.rs  mod.rs  parser.rs  transcript.rs  types.rs
src-tauri/src/agent/test_runners/: build.rs  cargo.rs  emitter.rs  matcher.rs  mod.rs  path_resolution.rs  preview.rs  sanitiser.rs  script_resolution.rs  test_file_patterns.rs  timestamps.rs  vitest.rs
src-tauri/src/filesystem/: SECURITY.md  commands.rs  list.rs  mod.rs  read.rs  scope.rs  types.rs  write.rs
src-tauri/src/filesystem/tests/: mod.rs  write_tests.rs
src-tauri/src/git/: mod.rs  watcher.rs
src-tauri/src/orchestrator/: commands.rs  mod.rs  runner.rs  runtime.rs  state.rs  tracker.rs  workflow.rs  workspace.rs
src-tauri/src/runtime/: event_sink.rs  ipc.rs  mod.rs  state.rs  tauri_bridge.rs  test_event_sink.rs
src-tauri/src/terminal/: bridge.rs  cache.rs  commands.rs  mod.rs  state.rs  test_commands.rs  types.rs
src-tauri/tests/: ipc_subprocess.rs  transcript_cargo_e2e.rs  transcript_turns.rs  transcript_vitest_e2e.rs  transcript_vitest_replay.rs
src-tauri/tests/fixtures/codex/: rollout-incomplete-trail.jsonl  rollout-info-null.jsonl  rollout-long-session.jsonl
src-tauri/tests/support/: mod.rs
(+1975 files in other folders)
