[package]
name = "vimeflow"
version = "0.1.0"
description = "Vimeflow - Coding agent conversation manager"
authors = []
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vimeflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
portable-pty = "0.8"
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["sync", "io-util", "time", "rt", "macros"] }
notify = "6"
dirs = "6"
ignore = "0.4"
tempfile = "3"
chrono = "0.4"

[features]
e2e-test = []

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
tokio = { version = "1", features = ["macros", "rt"] }
ts-rs = "10"
tempfile = "3"
