[package]
name = "vimeflow"
version = "0.1.0"
description = "Vimeflow - Coding agent conversation manager"
authors = []
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.90"
default-run = "vimeflow-backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vimeflow_lib"
crate-type = ["rlib"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
libghostty-vt = { version = "=0.2.0", default-features = false, optional = true }
portable-pty = "0.8"
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["sync", "io-util", "io-std", "time", "rt", "rt-multi-thread", "macros", "process"] }
tokio-util = { version = "0.7", features = ["rt"] }
notify = "6"
dirs = "6"
ignore = "0.4"
tempfile = "3"
chrono = "0.4"
shell-words = "1.1"
regex = "1.10"
rusqlite = { version = "0.32", features = ["bundled"] }
once_cell = "1.19"
env_logger = "0.11"
# Existing URL pin kept during the Ghostty migration to avoid unrelated
# resolver churn. Revisit separately now that libghostty-vt raises MSRV to 1.90.
url = ">=2.4, <2.5"

[features]
default = ["ghostty-vt"]
e2e-test = []
ghostty-vt = ["dep:libghostty-vt"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
ts-rs = "10"
tempfile = "3"

[[bin]]
name = "vimeflow-backend"
path = "src/bin/vimeflow-backend.rs"
