[package]
name = "vimeflow"
version = "0.1.0"
description = "Vimeflow - Coding agent conversation manager"
authors = []
license = "MIT"
repository = ""
edition = "2021"
# Raised from 1.77.2: the kimi usage path's ureq + rustls closure pulls
# zeroize 1.9 (rustc 1.85). CI builds on stable, so this is the honest floor.
rust-version = "1.85"
default-run = "vimeflow-backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vimeflow_lib"
crate-type = ["rlib"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"
log = "0.4"
portable-pty = "0.8"
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["sync", "io-util", "io-std", "time", "rt", "rt-multi-thread", "macros", "process"] }
tokio-util = { version = "0.7", features = ["rt"] }
notify = "6"
dirs = "6"
ignore = "0.4"
tempfile = "3"
chrono = "0.4"
shell-words = "1.1"
regex = "1.10"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
once_cell = "1.19"
# Pinned to 0.11.5: 0.11.10 pulls in `jiff`, which currently fails to download
# in CI due to transient SSL errors, blocking the Rust test job.
env_logger = "=0.11.5"
# Pinned < 2.5 to avoid pulling url 2.5+ / idna 1.x / ICU4X (zerovec), an
# unplanned dependency-tree churn out of scope for this crate. 2.4.x uses
# idna 0.4 (no ICU).
url = ">=2.4, <2.5"
# kimi plan-usage: the only outbound network call in the backend. rustls +
# bundled webpki roots (default features) so HTTPS needs no system certs.
ureq = "2"
# kimi config.toml holds the api_key under [providers."managed:kimi-code"]
# alongside sibling providers, so the section-scoped read needs a real parser.
toml = "0.8"

[features]
e2e-test = []

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
ts-rs = "10"
tempfile = "3"

[[bin]]
name = "vimeflow-backend"
path = "src/bin/vimeflow-backend.rs"
